--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   agora_rtc_engine: ^5.2.0
   permission_handler: ^9.0.2
+  firebase_messaging: ^12.0.0
+  firebase_core: ^1.19.2
 
 dev_dependencies:
   flutter_test:
