--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   permission_handler: ^9.0.2
   firebase_messaging: ^12.0.0
   firebase_core: ^1.19.2
+  flutter_ringtone_player: ^3.2.0
 
 dev_dependencies:
   flutter_test:
