--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_messaging: ^12.0.0
   firebase_core: ^1.19.2
   flutter_ringtone_player: ^3.2.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
