--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_messaging: ^12.0.0
   firebase_core: ^1.19.2
   flutter_ringtone_player: ^3.2.0
+  firebase_analytics: ^5.0.11
 
 
 dev_dependencies:
