--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@
 
 # Web related
 lib/generated_plugin_registrant.dart
+lib/common/environment.dart
 
 # Symbolication related
 app.*.symbols
@@ -44,4 +45,3 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-/common/environment.dart
