--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^1.19.2
   flutter_ringtone_player: ^3.2.0
   firebase_analytics: ^9.2.1
+  fluttertoast: ^8.0.9
 
 
 
